--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,25 @@
 /* webpage styling */
 
+html *
+{
+   font-family: Fira Sans !important;
+}
+h1 {
+	font-size: 4em !important;
+	font-weight: semi-bold !important;
+}
+h2 {
+	font-size: 3em !important;
+	font-weight: medium !important;
+}
+h3 {
+	font-size: 1.5em !important;
+	font-weight: bold !important;
+}
+p {
+	font-size: 1em !important;
+	font-weight: regular !important;
+}
 #container {
 	width: 80%;
 }
