tooling: add linting to git hook

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,1 @@
-/* webpage styling */
-
-#container {
-	width: 80%;
-}
-#title {
-	margin-top: 6rem;
-}
-#api-content {
-	margin-bottom: 6rem;
-	margin-top: 4rem;
-	width: 50%;
-}
+/* TODO: Add real styles here. */
