--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,5 @@
 @import "bulma/sass/utlilities/_all.sass"
 
-@import "~bulma"
+
+
+// @import "~bulma" This line causes build to fail but will be needed later when this file is filled out
