--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,3 @@
-@import "node_modules/bulma/sass/utlilities/_all.sass"
+@import "~bulma/sass/utilities/_all"
 
-@import "node_modules/bulma/bulma" // This line causes build to fail but will be needed later when this file is filled out
+// import "node_modules/bulma" This line causes build to fail but will be needed later when this file is filled out
