--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -1,2 +1,25 @@
-// Typography
+/** Typography **/
 $family-sans-serif: "Fira Sans", sans-serif;
+
+/** Colours **/
+
+// Primary
+$blue-dark: #6895c6;
+$blue: #84bcde;
+$blue-light: #acdde9;
+$gold-dark: #fcb33e;
+$gold: #fdcc70;
+$gold-light: #ffe6a7;
+
+// Secondary
+$black: #000;
+$black-bis: #313131;
+$navy-dark: #162439;
+$navy: #203149;
+$navy-light: #2e405b;
+
+$blue-alt: #5e82ae;
+$blue-alt-light:#8caabb;
+$green:#b0d0be;
+$green-light: #cee6c5;
+$green-pale: #f7fff4;
