fix:  Set up typography styles
resolves #79

--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -1,1 +1,18 @@
 // Base styles.
+
+h1 {
+	font-size: 4em ;
+	font-weight: semi-bold ;
+}
+h2 {
+	font-size: 3em ;
+	font-weight: medium ;
+}
+h3 {
+	font-size: 1.5em ;
+	font-weight: bold ;
+}
+p {
+	font-size: 1em ;
+	font-weight: regular ;
+}
