fix:  added title bulma variable values

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -23,3 +23,8 @@ $blue-alt-light:#8caabb;
 $green:#b0d0be;
 $green-light: #cee6c5;
 $green-pale: #f7fff4;
+
+// title
+$title-size: 4em;
+$title-weight: semi-bold;
+
