fix: added only necessary bulma folders

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,8 @@
 @import "abstracts/abstracts";
 
 /** Bulma **/
-@import "~bulma";
+@import "~bulma/sass/grid/_all";
+@import "~bulma/sass/layout/_all";
 
 /** Partials **/
 
