--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,8 +6,9 @@
 @import "abstracts/abstracts";
 
 /** Bulma **/
-@import "~bulma/sass/grid/_all";
-@import "~bulma/sass/layout/_all";
+@import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/grid/_all.sass";
+@import "bulma/sass/layout/_all.sass";
 
 /** Partials **/
 
