feat: add SVG logo which responds to UIO/UIO+

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -24,6 +24,11 @@ $green:#b0d0be;
 $green-light: #cee6c5;
 $green-pale: #f7fff4;
 
+// UIO
+$yellow: #ff0;
+$white: #fff;
+$grey: #bdbdbb;
+
 // title
 $title-size: 4em;
 $title-weight: semi-bold;
