fix: support fl-theme-{gw|gd}

--- a/assets/css/components/_brand.scss
+++ b/assets/css/components/_brand.scss
@@ -17,8 +17,9 @@
   --logo-stroke: #{$black};
 }
 
-.fl-theme-lgdg,
+.fl-theme-gw,
 .gpii-ext-theme-gw,
+.fl-theme-gd,
 .gpii-ext-theme-gd {
   --logo-stroke: #{$grey};
 }
