feat: added necessary bulma folders

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,7 @@
 
 /** Bulma **/
 @import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/base/minireset.sass";
 @import "bulma/sass/grid/_all.sass";
 @import "bulma/sass/layout/_all.sass";
 
