--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -1,18 +1,21 @@
 // Base styles.
 
+* {
+	font-family: $family-sans-serif;
+}
+
 h1 {
-	font-size: 4em ;
-	font-weight: semi-bold ;
+	font-size: 4em;
+	font-weight: 600;
 }
 h2 {
-	font-size: 3em ;
-	font-weight: medium ;
+	font-size: 3em;
+	font-weight: 500;
 }
 h3 {
-	font-size: 1.5em ;
-	font-weight: bold ;
+	font-size: 1.5em;
+	font-weight: 700;
 }
 p {
-	font-size: 1em ;
-	font-weight: regular ;
+	font-size: 1em;
 }
