fix:  Set up typography styles (#92)
* fix:  Set up typography styles

resolves #79

* fix:  added title bulma variable values

* fix: added only necessary bulma folders

* fix: added bulma utilities folders

* fix: apply stricter stylelint rules

* fix: used numeric font-weight values

Co-authored-by: Ned Zimmerman <ned@bight.dev>

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,9 @@
 @import "abstracts/abstracts";
 
 /** Bulma **/
-@import "~bulma";
+@import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/grid/_all.sass";
+@import "bulma/sass/layout/_all.sass";
 
 /** Partials **/
 
