--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -27,8 +27,8 @@ p {
 
 // Links and Buttons
 a {
-  color: $blue-dark;
-  font-weight: bold;
+  color: $blue-alt;
+  font-weight: 700;
   text-decoration: none;
 }
 
@@ -39,19 +39,19 @@ a:focus {
 
 button {
   background-color: $green-light;
-  border: 2px solid $blue-alt-light;
-  border-radius: 70px;
-  font-size: 24px;
+  border: 0.125em solid $blue-alt-light;
+  border-radius: 4.375em;
+  font-size: 1.5em;
   font-weight: 400;
-  height: 53px;
-  line-height: 34px;
-  padding: 9px 34px;
+  height: 3.3125em;
+  line-height: 34 / 24;
+  padding: 0.5625em 2.125em;
   transform: perspective(1px) translateZ(0);
 }
 
 button::before {
-  border: 2px solid $blue-alt-light;
-  border-radius: 70px;
+  border: 0.125em solid $blue-alt-light;
+  border-radius: 4.375em;
   content: '';
   opacity: 0;
   position: absolute;
@@ -60,9 +60,9 @@ button::before {
 button:hover::before,
 button:focus::before,
 button:active::before {
-  bottom: -7px;
+  bottom: -0.4375em;
   left: 0;
   opacity: 1;
-  right: -6px;
-  top: 5px;
+  right: -0.375em;
+  top: 0.3125em;
 }
