--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -1,6 +1,6 @@
 // Base styles.
 
-// Typography
+// Typography.
 * {
   box-sizing: border-box;
   font-family: $family-sans-serif;
@@ -8,27 +8,27 @@
 
 h1 {
   font-size: 4em;
-  font-weight: 600;
+  font-weight: $font-weight-semibold;
 }
 
 h2 {
   font-size: 3em;
-  font-weight: 500;
+  font-weight: $font-weight-medium;
 }
 
 h3 {
   font-size: 1.5em;
-  font-weight: 700;
+  font-weight: $font-weight-bold;
 }
 
 p {
   font-size: 1em;
 }
 
-// Links and Buttons
+// Links and Buttons.
 a {
   color: $blue-alt;
-  font-weight: 700;
+  font-weight: $font-weight-bold;
   text-decoration: none;
 }
 
@@ -39,30 +39,42 @@ a:focus {
 
 button {
   background-color: $green-light;
-  border: 0.125em solid $blue-alt-light;
-  border-radius: 4.375em;
-  font-size: 1.5em;
+  border: 0;
+  border-radius: rem(28);
+  box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
+  color: $grey-dark;
+  font-size: rem(24);
   font-weight: 400;
-  height: 3.3125em;
-  line-height: 34 / 24;
-  padding: 0.5625em 2.125em;
-  transform: perspective(1px) translateZ(0);
+  height: rem(54);
+  line-height: (34 / 24);
+  padding: rem(8) rem(34);
+  transform: perspective(rem(1)) translateZ(0);
 }
 
 button::before {
-  border: 0.125em solid $blue-alt-light;
-  border-radius: 4.375em;
+  border-radius: rem(26);
+  box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
   content: '';
-  opacity: 0;
+  height: rem(54);
+  left: 0;
+  opacity: 1;
   position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 button:hover::before,
 button:focus::before,
 button:active::before {
-  bottom: -0.4375em;
-  left: 0;
-  opacity: 1;
-  right: -0.375em;
-  top: 0.3125em;
+  left: rem(4);
+  top: rem(4);
+}
+
+button::-moz-focus-inner {
+  outline: none;
+}
+
+button:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 currentColor;
 }
