--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -1,24 +1,80 @@
 // Base styles.
 
+// Typography.
 * {
+  box-sizing: border-box;
   font-family: $family-sans-serif;
 }
 
 h1 {
-  font-size: 4em;
-  font-weight: 600;
+  font-size: rem(64);
+  font-weight: $font-weight-semibold;
 }
 
 h2 {
-  font-size: 3em;
-  font-weight: 500;
+  font-size: rem(48);
+  font-weight: $font-weight-medium;
 }
 
 h3 {
-  font-size: 1.5em;
-  font-weight: 700;
+  font-size: rem(24);
+  font-weight: $font-weight-bold;
 }
 
 p {
-  font-size: 1em;
+  font-size: rem(16);
+}
+
+// Links and Buttons.
+a {
+  color: $blue-alt;
+  font-weight: $font-weight-bold;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  background-color: $orange-focus;
+}
+
+button {
+  background-color: $green-light;
+  border: 0;
+  border-radius: rem(28);
+  box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
+  color: $grey-dark;
+  font-size: rem(24);
+  font-weight: 400;
+  height: rem(54);
+  line-height: (34 / 24);
+  padding: rem(8) rem(34);
+  transform: perspective(rem(1)) translateZ(0);
+}
+
+button::before {
+  border-radius: rem(26);
+  box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
+  content: '';
+  height: rem(54);
+  left: 0;
+  opacity: 1;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+button:hover::before,
+button:focus::before,
+button:active::before {
+  left: rem(4);
+  top: rem(4);
+}
+
+button::-moz-focus-inner {
+  outline: none;
+}
+
+button:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 currentColor;
 }
