--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -85,3 +85,12 @@ button:-moz-focusring {
   color: transparent;
   text-shadow: 0 0 0 $grey-dark;
 }
+
+// News
+
+.news-item {
+  background: #fff;
+  box-sizing: border-box;
+  height: rem(252);
+  width: rem(397);
+}
