--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -61,6 +61,7 @@ header {
                 font-weight: normal;
                 margin: rem(16) rem(16);
                 text-align: left;
+                white-space: nowrap;
 
                 &:hover,
                 &:focus {
@@ -118,15 +119,15 @@ header {
                 position: inherit;
 
                 a {
-                    border: solid 1rem $navy-light;
                     margin: 0;
-                    padding: rem(16) rem(10);
+                    padding: rem(32) rem(10);
                 }
 
                 // When the user is in a section (other than the Home page), underline this particular item
                 // in the top level navigation.
                 a.nuxt-link-active {
-                    border-bottom: solid rem(16) $orange-focus;
+                    border-bottom: 1rem solid $orange-focus;
+                    padding-bottom: 1rem;
                 }
             }
 
