--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -57,7 +57,7 @@ header {
                 color: $white;
                 display: block;
                 float: none;
-                ight: normal;
+                font-weight: $font-weight-normal;
                 margin: rem(16) rem(16);
                 text-align: left;
                 white-space: nowrap;
