Issue-113: In progress on the footer styles.

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -7,6 +7,9 @@ $font-weight-medium: 500;
 $font-weight-semibold: 600;
 $font-weight-bold: 700;
 
+/** Max Widths **/
+$max-width-margins: rem(1600);
+
 /** Colours **/
 
 // Primary
