--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,7 @@
 
 @import "base/base";
 @import "components/components";
-@import "layout/layout";
+@import "layout/footer";
 @import "pages/pages";
 @import "themes/themes";
 @import "vendors/vendors";
