--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -121,7 +121,8 @@ header {
         position: inherit;
 
         a {
-          padding: rem(16) rem(10) rem(16) 0;
+          margin: rem(24);
+          padding: rem(8) rem(10);
         }
 
         // When the user is in a section (other than the Home page), underline this particular item
