--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -36,6 +36,12 @@ header {
       color: $white;
       font-size: rem(16);
       padding: rem(8);
+
+      svg {
+        padding: rem(3.2);
+        pointer-events: none;
+        width: rem(32);
+      }
     }
 
     button::before {
@@ -57,6 +63,7 @@ header {
       width: 100%;
 
       a {
+        border-bottom: solid rem(2);
         color: $white;
         display: block;
         float: none;
@@ -121,6 +128,7 @@ header {
         position: inherit;
 
         a {
+          border-bottom: none;
           margin: rem(24);
           padding: rem(8) rem(10);
         }
