--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -1,2 +1,14 @@
 // Layout styles.
-@import "main";
+.main {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75ch;
+  padding: rem(0) rem(27px);
+}
+
+@media screen and (min-width: 600px) {
+  .main {
+    max-width: 130ch;
+    padding: rem(0) (60px);
+  }
+}
