--- a/assets/css/components/_news-and-views.scss
+++ b/assets/css/components/_news-and-views.scss
@@ -1,37 +1,37 @@
-figure {
-  height: rem(298px);
-}
-
-/* resize images */
-.news-item-img {
-  display: block;
-  margin: 0 auto;
-  max-height: 100%;
-  max-width: 100%;
-}
-
-.news-item {
-  padding: rem(8) rem(34);
-}
-
 .news-grid {
   display: grid;
-  grid-gap: rem(30px) rem(38px);
+  grid-gap: rem(30) rem(38);
   grid-template-columns: repeat(1, 1fr);
 
   .api-content {
     background: #fff;
     border: 1px solid #000;
     box-sizing: border-box;
+
+    .news-item {
+      padding: rem(8) rem(34);
+
+      figure {
+        height: rem(298);
+
+        /* resize images */
+        .news-item-img {
+          display: block;
+          margin: 0 auto;
+          max-height: 100%;
+          max-width: 100%;
+        }
+      }
+    }
   }
 }
 
-@media screen and (min-width: 600px) {
-  figure {
-    height: rem(252px);
-  }
-
+@media screen and (min-width: 600) {
   .news-grid {
     grid-template-columns: repeat(2, 1fr);
+
+    figure {
+      height: rem(252);
+    }
   }
 }
