--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -3,12 +3,12 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 75ch;
-  padding: rem(0) rem(27px);
+  padding: rem(0) rem(27);
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600) {
   .main {
     max-width: 130ch;
-    padding: rem(0) (60px);
+    padding: rem(0) (60);
   }
 }
