--- a/assets/css/components/_news-and-views.scss
+++ b/assets/css/components/_news-and-views.scss
@@ -26,7 +26,7 @@
   }
 }
 
-@media screen and (min-width: 600) {
+@media screen and (min-width: 1024px) {
   .news-grid {
     grid-template-columns: repeat(2, 1fr);
 
