--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -1,13 +1,13 @@
 // Layout styles.
-.main {
+article {
   margin-left: auto;
   margin-right: auto;
   max-width: 75ch;
   padding: rem(0) rem(27);
 }
 
-@media screen and (min-width: 600) {
-  .main {
+@media screen and (min-width: 1024px) {
+  article {
     max-width: 130ch;
     padding: rem(0) (60);
   }
