--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -2,9 +2,11 @@
 
 header {
   margin: auto;
-  max-width: $max-width-margins;
 
   .brand {
+    margin: auto;
+    max-width: $max-width-margins;
+
     a {
       color: $black;
       font-size: rem(48);
@@ -18,140 +20,148 @@ header {
     }
   }
 
-  .site-nav {
-    align-items: center;
+  .site-nav-wrapper {
     background-color: $navy-light;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0 rem(16);
+    width: 100%;
 
-    // Toggle menu button on mobile design
-    // Override the default button styles from _base.scss and apply the new style
-    button {
-      background: none;
-      border: none;
-      border-radius: 0;
-      box-shadow: none;
-      color: $white;
-      font-size: rem(16);
-      padding: rem(8);
+    .site-nav {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin: auto;
+      max-width: $max-width-margins;
+      padding: 0 rem(16);
 
-      svg {
-        padding: rem(3.2);
-        pointer-events: none;
-        width: rem(32);
-      }
-    }
-
-    button::before {
-      content: none;
-    }
-
-    button:hover,
-    button:focus {
-      background-color: $orange-focus;
-    }
-
-    // Styles for the navigation menu
-    nav {
-      background: $navy-dark;
-      display: none;
-      left: 0;
-      position: absolute;
-      top: rem(120);
-      width: 100%;
-
-      a {
-        border-bottom: solid rem(2);
+      // Toggle menu button on mobile design
+      // Override the default button styles from _base.scss and apply the new style
+      button {
+        background: none;
+        border: none;
+        border-radius: 0;
+        box-shadow: none;
         color: $white;
-        display: block;
-        float: none;
-        font-weight: $font-weight-normal;
-        margin: rem(16) rem(16);
-        text-align: left;
-        white-space: nowrap;
+        font-size: rem(16);
+        padding: rem(8);
 
-        &:hover,
-        &:focus {
-          color: $navy-light;
+        svg {
+          padding: rem(3.2);
+          pointer-events: none;
+          width: rem(32);
         }
       }
-    }
 
-    button[aria-expanded="true"] + nav {
-      display: block;
-    }
+      button::before {
+        content: none;
+      }
 
-    // Styles for the search container
-    .search-container {
-      align-items: center;
-      display: flex;
+      button:hover,
+      button:focus {
+        background-color: $orange-focus;
+        color: $navy-light;
+      }
 
-      input[type="search"] {
-        background-color: white;
-        background-image: url("../../static/img/search.svg");
-        background-position: center;
-        background-repeat: no-repeat;
-        border: 0;
-        border-radius: 50%;
-        outline: none;
-        padding: rem(8) rem(16);
-        width: rem(16);
+      // Styles for the navigation menu
+      nav {
+        background: $navy-dark;
+        display: none;
+        left: 0;
+        position: absolute;
+        top: rem(120);
+        width: 100%;
 
-        &:focus {
-          background-position: left rem(8) center;
-          border-radius: rem(28);
-          padding-left: rem(32);
-          width: rem(160);
+        a {
+          border-bottom: solid rem(2);
+          color: $white;
+          display: block;
+          float: none;
+          font-weight: $font-weight-normal;
+          margin: rem(16) rem(16);
+          text-align: left;
+          white-space: nowrap;
+
+          &:hover,
+          &:focus {
+            color: $navy-light;
+          }
+        }
+      }
+
+      button[aria-expanded="true"] + nav {
+        display: block;
+      }
+
+      // Styles for the search container
+      .search-container {
+        align-items: center;
+        display: flex;
+
+        input[type="search"] {
+          background-color: white;
+          background-image: url("../../static/img/search.svg");
+          background-position: center;
+          background-repeat: no-repeat;
+          border: 0;
+          border-radius: 50%;
+          outline: none;
+          padding: rem(8) rem(16);
+          width: rem(16);
+
+          &:focus {
+            background-position: left rem(8) center;
+            border-radius: rem(28);
+            padding-left: rem(32);
+            width: rem(160);
+          }
         }
       }
     }
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 1024px) {
   header {
-    .site-nav {
-      justify-content: space-around;
-
-      button {
-        display: none;
-      }
-
-      nav {
-        background-color: transparent;
-        display: flex;
-        flex: 1;
-        flex-direction: row;
+    .site-nav-wrapper {
+      .site-nav {
         justify-content: space-around;
-        position: inherit;
 
-        a {
-          border-bottom: none;
-          margin: rem(24);
-          padding: rem(8) rem(10);
+        button {
+          display: none;
         }
 
-        // When the user is in a section (other than the Home page), underline this particular item
-        // in the top level navigation.
-        a.nuxt-link-active {
-          border-bottom: rem(2) solid $orange-focus;
+        nav {
+          background-color: transparent;
+          display: flex;
+          flex: 1;
+          flex-direction: row;
+          justify-content: space-around;
+          position: inherit;
+
+          a {
+            border-bottom: none;
+            margin: rem(24);
+            padding: rem(8) rem(10);
+          }
+
+          // When the user is in a section (other than the Home page), underline this particular item
+          // in the top level navigation.
+          a.nuxt-link-active {
+            border-bottom: rem(2) solid $orange-focus;
+          }
         }
-      }
 
-      button[aria-expanded="true"] + nav {
-        display: flex;
-      }
+        button[aria-expanded="true"] + nav {
+          display: flex;
+        }
 
-      .search-container {
-        input[type="search"],
-        input[type="search"]:focus {
-          background-position: left rem(8) center;
-          border-radius: rem(28);
-          font-size: inherit;
-          padding: rem(16) rem(48);
-          width: rem(240);
+        .search-container {
+          input[type="search"],
+          input[type="search"]:focus {
+            background-position: left rem(8) center;
+            border-radius: rem(28);
+            font-size: inherit;
+            padding: rem(16) rem(48);
+            width: rem(240);
+          }
         }
       }
     }
