--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -1,41 +1,62 @@
 // Footer styles.
 
 footer {
-  align-items: center;
   background: $navy-light;
   color: $white;
-  display: flex;
-  flex-direction: column;
-  font-size: rem(16);
-  line-height: rem(29);
   margin: auto;
-  max-width: $max-width-margins;
 
-  h2 {
+  .footer-content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     font-size: rem(16);
-    font-weight: bold;
-  }
+    line-height: rem(29);
+    margin: auto;
+    max-width: $max-width-margins;
 
-  div {
-    margin-bottom: rem(16);
-  }
-
-  .contact-info {
-    a {
-      font-weight: $font-weight-normal;
+    h2 {
+      font-size: rem(16);
+      font-weight: bold;
     }
 
-    svg {
-      width: rem(160);
+    div {
+      margin-bottom: rem(16);
     }
+
+    .contact-info {
+      a {
+        font-weight: $font-weight-normal;
+      }
+
+      svg {
+        width: rem(160);
+      }
+    }
+
+    .social-media {
+      ul {
+        list-style: none;
+
+        img {
+          width: rem(32);
+        }
+      }
+    }
+  }
+
+  p.netlify-notice {
+    text-align: center;
+    padding-bottom: rem(32);
   }
 }
 
 @media screen and (min-width: 600px) {
   footer {
-    align-content: flex-start;
-    align-items: baseline;
-    flex-direction: row;
-    justify-content: space-around;
+    .footer-content {
+      align-content: flex-start;
+      align-items: baseline;
+      flex-direction: row;
+      justify-content: space-around;
+    }
   }
 }
