Issue-113: Display social media icons within <img> elements.

--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -36,9 +36,15 @@ footer {
     .social-media {
       ul {
         list-style: none;
+        padding: 0;
 
-        img {
-          width: rem(32);
+        li {
+          display: inline;
+          padding: rem(5);
+
+          img {
+            width: rem(32);
+          }
         }
       }
     }
