Issue-116: Fix these issues: 1. Center the pagination component in the middle of the page; 2. Highlight activated page number in pagination.

--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -1,8 +1,13 @@
 .pagination {
-  display: inline-block;
+  display: block;
   list-style: none;
   margin-top: 10px;
   padding: 0;
+  text-align: center;
+
+  .pagination-list {
+    display: inline-block;
+  }
 
   .prev-next {
     height: rem(53);
@@ -12,6 +17,10 @@
   li {
     display: inline;
     text-align: center;
+
+    a.nuxt-link-active {
+      background-color: #ffa100;
+    }
   }
 
   .pagination-link {
