fix: used font weight variable

--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -28,7 +28,7 @@
     border-radius: 100%;
     float: left;
     font-size: rem(24);
-    font-weight: 400;
+    font-weight: $font-weight-normal;
     height: rem(53);
     line-height: rem(50);
     margin: 0 rem(13);
