Issue-113: Inject SVG html for social media icons on the footer.

--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -42,8 +42,9 @@ footer {
           display: inline;
           padding: rem(5);
 
-          img {
+          svg {
             width: rem(32);
+            height: rem(32);
           }
         }
       }
