Styles news and views (#120)
* fix: ran npm install

* feat: add Figma styling to news and views

* fix: add media qureies

* fix: default image for news items

* fix: remove _main.scss

* fix: media quries not working properly

Issue-116

* fix: style article instead of .main

* Issue-116: Fix these issues: 1. Center the pagination component in the middle of the page; 2. Highlight activated page number in pagination.

* fix: centered pagination

* fix: used font weight variable

* fix: hide images in mobile view

* fix: added specificity to figure element in desktop

Co-authored-by: Cindy Qi Li <cli@ocadu.ca>

--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -6,7 +6,7 @@
 }
 
 h1 {
-  font-size: rem(64);
+  font-size: rem(48);
   font-weight: $font-weight-semibold;
 }
 
@@ -15,7 +15,8 @@ h2 {
   font-weight: $font-weight-medium;
 }
 
-h3 {
+h3,
+.h3 {
   font-size: rem(24);
   font-weight: $font-weight-bold;
 }
@@ -84,4 +85,10 @@ button:focus {
 button:-moz-focusring {
   color: transparent;
   text-shadow: 0 0 0 $grey-dark;
+}
+
+@media screen and (min-width: 1024px) {
+  h1 {
+    font-size: rem(64);
+  }
 }
