--- a/assets/css/components/_news-and-views.scss
+++ b/assets/css/components/_news-and-views.scss
@@ -15,13 +15,52 @@
         display: none;
         height: rem(298);
 
-        /* resize images */
+        // resize images
         .news-item-img {
           display: block;
           margin: 0 auto;
           max-height: 100%;
           max-width: 100%;
         }
+      }
+
+      .author {
+        font-weight: $font-weight-semibold;
+      }
+
+      .date {
+        padding-bottom: rem(8);
+      }
+
+      // Apply ellipsis on the third line to the preview content.
+      // Reference: http://hackingui.com/front-end/a-pure-css-solution-for-multiline-text-truncation/
+      .preview-content {
+        line-height: 1.2em;
+        margin-bottom: 1rem;
+        margin-right: -1em;
+        max-height: 3.6em;
+        overflow: hidden;
+        padding-right: 1em;
+        position: relative;
+        text-align: justify;
+      }
+
+      .preview-content::before {
+        bottom: 0;
+        content: '...';
+        position: absolute;
+        right: 0;
+      }
+
+      // hide ... if we have text, which is less than or equal to max lines
+      .preview-content::after {
+        background: white;
+        content: '';
+        height: 1em;
+        margin-top: 0.2em;
+        position: absolute;
+        right: 0;
+        width: 1em;
       }
     }
   }
