--- a/assets/css/components/_news-and-views.scss
+++ b/assets/css/components/_news-and-views.scss
@@ -35,12 +35,12 @@
       // Apply ellipsis on the third line to the preview content.
       // Reference: http://hackingui.com/front-end/a-pure-css-solution-for-multiline-text-truncation/
       .preview-content {
-        line-height: 1.2em;
-        margin-bottom: 1rem;
-        margin-right: -1em;
-        max-height: 3.6em;
+        line-height: rem(19.2);
+        margin-bottom: rem(16);
+        margin-right: rem(-16);
+        max-height: rem(57.6);
         overflow: hidden;
-        padding-right: 1em;
+        padding-right: rem(16);
         position: relative;
         text-align: justify;
       }
@@ -56,11 +56,11 @@
       .preview-content::after {
         background: white;
         content: '';
-        height: 1em;
-        margin-top: 0.2em;
+        height: rem(16);
+        margin-top: rem(3.2);
         position: absolute;
         right: 0;
-        width: 1em;
+        width: rem(16);
       }
     }
   }
