Issue-127: Fix the ellipsis position for the pagination.

--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -39,6 +39,11 @@
     }
   }
 
+  .pagination-ellipsis,
+  .pagination-ellipsis:hover {
+    background-color: inherit;
+  }
+
   .pagination-previous {
     float: left;
   }
