Issue-89: Address review suggestions.

--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -18,7 +18,7 @@
     display: inline;
     text-align: center;
 
-    a.nuxt-link-active {
+    a.is-current {
       background-color: #ffa100;
     }
   }
