--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -9,7 +9,7 @@ body {
   background-size: cover;
 }
 
-article {
+article:not(.article-homepage) {
   margin-left: auto;
   margin-right: auto;
   max-width: 75ch;
@@ -22,7 +22,7 @@ article {
     background-size: 900px rem(700);
   }
 
-  article {
+  article:not(.article-homepage) {
     background-color: $white;
     max-width: 130ch;
     padding: rem(1) rem(60);
