--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   display: block;
   list-style: none;
-  margin-top: 10px;
+  margin-top: rem(10);
   padding: 0;
   text-align: center;
 
@@ -11,40 +11,63 @@
 
   .prev-next {
     height: rem(53);
-    margin: 0 rem(20);
+    margin: 0 rem(6);
   }
 
   li {
     display: inline;
     text-align: center;
 
+    .pagination-ellipsis {
+      color: $blue-alt;
+    }
+
     a.nuxt-link-active {
-      background-color: #ffa100;
+      background-color: $green-pale;
+      border: rem(2) solid #6085b3; // no color variable available
     }
   }
 
   .pagination-link {
-    background-color: #f7c12c;
+    background-color: $green-light;
+    border: rem(2) solid $blue-alt-light;
     border-radius: 100%;
     float: left;
-    font-size: rem(24);
-    font-weight: $font-weight-normal;
-    height: rem(53);
-    line-height: rem(50);
-    margin: 0 rem(13);
-    width: rem(53);
+    font-size: rem(15);
+    font-weight: 400;
+    height: rem(30);
+    line-height: rem(27);
+    margin: rem(10) rem(4);
+    width: rem(30);
+    &:active { outline: none; }
 
     &:hover {
-      background-color: #ffa500;
+      background-color: $green-pale;
     }
-  }
-
-  .pagination-ellipsis,
-  .pagination-ellipsis:hover {
-    background-color: inherit;
   }
 
   .pagination-previous {
     float: left;
+  }
+
+  .pagination-next:hover,
+  .pagination-previous:hover {
+    background-color: transparent;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .pagination {
+    .prev-next {
+      margin: 0 rem(20);
+    }
+
+    .pagination-link {
+      font-size: rem(24);
+      height: rem(53);
+      line-height: rem(50);
+      margin: 0 rem(13);
+      width: rem(53);
+    }
   }
 }
