fix: added proper color to ellipsis

--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -18,7 +18,7 @@
     display: inline;
     text-align: center;
 
-    a.is-current .pagination-ellipsis {
+    .pagination-ellipsis {
       color: $blue-alt;
     }
 
