Issue-113: In progress with the footer style.

--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -97,7 +97,7 @@ header {
 
         input[type="search"] {
           background-color: white;
-          background-image: url("../../static/img/search.svg");
+          background-image: url("../images/search.svg");
           background-position: center;
           background-repeat: no-repeat;
           border: 0;
