--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -3,24 +3,20 @@
 footer {
   background: $navy-light;
   color: $white;
-  margin: auto;
+  margin-top: rem(30);
+  padding: rem(16) rem(32);
 
   .footer-content {
-    align-items: center;
+    align-items: baseline;
     display: flex;
     flex-direction: column;
     font-size: rem(16);
     line-height: rem(29);
-    margin: auto;
     max-width: $max-width-margins;
 
     h2 {
       font-size: rem(16);
       font-weight: bold;
-    }
-
-    div {
-      margin-bottom: rem(16);
     }
 
     .contact-info {
@@ -34,17 +30,48 @@ footer {
     }
 
     .social-media {
-      ul {
-        list-style: none;
-        padding: 0;
+      align-self: center;
+    }
 
-        li {
-          display: inline;
-          padding: rem(5);
+    .nav-home-about,
+    .nav-tools,
+    .nav-our-data,
+    .nav-inclusion-challenges {
+      display: none;
+
+      a:hover,
+      a:focus {
+        color: $navy-light;
+      }
+    }
+
+    .social-media-icons {
+      display: grid;
+      grid-gap: rem(16);
+      grid-template-columns: repeat(2, auto);
+      margin: auto;
+      width: rem(96);
+
+      div {
+        justify-self: center;
+
+        svg {
+          height: rem(40);
+          width: rem(40);
+        }
+
+        a:hover,
+        a:focus {
+          background-color: inherit;
 
           svg {
-            width: rem(32);
-            height: rem(32);
+            fill: $navy-light;
+            stroke: $white;
+            stroke-linecap: round;
+
+            path {
+              fill: $navy-light;
+            }
           }
         }
       }
@@ -53,17 +80,57 @@ footer {
 
   p.netlify-notice {
     text-align: center;
-    padding-bottom: rem(32);
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 1024px) {
   footer {
+    margin-top: rem(80);
+
     .footer-content {
-      align-content: flex-start;
-      align-items: baseline;
-      flex-direction: row;
-      justify-content: space-around;
+      display: grid;
+      grid-row-gap: rem(16);
+      grid-template-columns: repeat(5, 1fr);
+      padding: rem(32) rem(48);
+
+      .nav-home-about,
+      .nav-tools,
+      .nav-our-data,
+      .nav-inclusion-challenges {
+        display: block;
+
+        a {
+          color: $green-light;
+          font-weight: $font-weight-semibold;
+        }
+      }
+
+      .nav-home-about,
+      .nav-our-data {
+        .nav-link-wrapper {
+          display: block;
+          padding-bottom: rem(32);
+        }
+      }
+
+      .contact-info {
+        grid-column: 1/3;
+        grid-row: 2/3;
+      }
+
+      .social-media {
+        align-self: auto;
+      }
+
+      .social-media-icons {
+        grid-template-columns: repeat(4, auto);
+        margin: inherit;
+      }
+
+      .funders {
+        grid-column: 5/6;
+        line-height: rem(19);
+      }
     }
   }
 }
