--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -6,12 +6,18 @@ footer {
   margin-top: rem(30);
   padding: rem(16) rem(32);
 
+  .netlify-notice {
+    padding-top: rem(32);
+    text-align: center;
+  }
+
   .footer-content {
     align-items: baseline;
     display: flex;
     flex-direction: column;
     font-size: rem(16);
     line-height: rem(29);
+    margin: auto;
     max-width: $max-width-margins;
 
     h2 {
@@ -21,10 +27,6 @@ footer {
 
     .contact-info {
       width: 100%;
-
-      a {
-        font-weight: $font-weight-normal;
-      }
 
       svg {
         width: rem(160);
@@ -36,59 +38,66 @@ footer {
       }
     }
 
-    .social-media {
-      align-self: center;
-      padding-bottom: rem(32);
-    }
-
     .nav-home-about,
     .nav-tools,
     .nav-our-data,
     .nav-inclusion-challenges {
       display: none;
+    }
 
-      a:hover,
-      a:focus {
-        color: $navy-light;
+    .contact-info,
+    .netlify-notice {
+      a {
+        color: $white;
+        font-weight: $font-weight-normal;
+
+        &:hover,
+        &:focus {
+          svg {
+            color: $navy-light;
+          }
+        }
       }
     }
 
-    .social-media-icons {
-      display: grid;
-      grid-gap: rem(16);
-      grid-template-columns: repeat(2, auto);
-      margin: auto;
-      width: rem(96);
+    .social-media {
+      align-self: center;
+      padding-bottom: rem(32);
 
-      div {
-        justify-self: center;
+      .social-media-icons {
+        display: grid;
+        grid-gap: rem(16);
+        grid-template-columns: repeat(2, auto);
+        margin: auto;
+        width: rem(96);
 
-        svg {
-          height: rem(40);
-          width: rem(40);
+        div {
+          justify-self: center;
         }
 
-        a:hover,
-        a:focus {
-          background-color: inherit;
-
+        a {
           svg {
-            fill: $navy-light;
-            stroke: $white;
-            stroke-linecap: round;
+            height: rem(40);
+            width: rem(40);
+          }
 
-            path {
+          &:hover,
+          &:focus {
+            background-color: inherit;
+
+            svg {
               fill: $navy-light;
+              stroke: $white;
+              stroke-linecap: round;
+
+              path {
+                fill: $navy-light;
+              }
             }
           }
         }
       }
     }
-  }
-
-  p.netlify-notice {
-    padding-top: rem(32);
-    text-align: center;
   }
 }
 
@@ -122,36 +131,45 @@ footer {
         }
       }
 
-      .contact-info {
-        grid-column: 1/3;
-        grid-row: 2/3;
-
-        .logo-ocadu-wrapper {
-          display: inline-flex;
-
-          .logo-ocadu {
-            padding: 0;
-          }
-        }
-      }
-
       .social-media {
         align-self: auto;
-      }
 
-      .social-media-icons {
-        grid-template-columns: repeat(4, auto);
-        margin: inherit;
+        .social-media-icons {
+          grid-template-columns: repeat(4, auto);
+          margin: inherit;
+        }
       }
 
       .funders {
         align-self: end;
         grid-column: 5/6;
         line-height: rem(19);
+
+        a {
+          display: inline-block;
+        }
       }
     }
 
-    p.netlify-notice {
+    .contact-info {
+      grid-column: 1/3;
+      grid-row: 2/3;
+
+      .logo-ocadu-wrapper {
+        display: inline-flex;
+        padding-top: rem(16);
+
+        a {
+          display: inline-block;
+        }
+
+        .logo-ocadu {
+          padding: 0;
+        }
+      }
+    }
+
+    .netlify-notice {
       padding-top: 0;
     }
   }
