--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -1,11 +1,24 @@
 // Layout styles.
 @import "header";
+@import "footer";
 
 article {
   margin-left: auto;
   margin-right: auto;
   max-width: 75ch;
   padding: rem(0) rem(27);
+}
+
+.screen-reader-only {
+  border-width: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
 @media screen and (min-width: 1024px) {
